made genre list inside a dropdown menu

--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-            <a id="tags" href="#">Link 1</a>
+            <div id="tags"></div>
           </div>
         </div>
       </div>
@@ -56,4 +56,3 @@
     <script src="/main.js"></script>
   </body>
 </html>
-l
