--- a/pages/dashboard/dashboard.html
+++ b/pages/dashboard/dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./dashboard.css" />
     <script src="https://use.fontawesome.com/7e14c419c8.js"></script>
     <title>Document</title>
   </head>
