--- a/index.html
+++ b/index.html
@@ -1,32 +1,95 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./login.css" />
-    <title>Document</title>
+    <title>Login</title>
+    <link rel="stylesheet" type="text/css" href="./style.css" />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+    />
   </head>
   <body>
-    <div class="form-container">
-      <form class="signin-form">
-        <div class="form-heading">Sign In</div>
-        <input class="signin-email" type="text" placeholder="Email" />
-        <input class="signin-password" type="password" placeholder="Password" />
-        <button type="submit">Sign In</button>
-      </form>
-      <form class="signup-form">
-        <div class="form-heading">Sign Up</div>
-        <input class="signup-email" type="text" placeholder="Email" />
-        <input class="signup-name" type="text" placeholder="Name" />
-        <input class="signup-password" type="password" placeholder="Password" />
-        <input
-          class="signup-retyped-password"
-          type="password"
-          placeholder="Re-type Password"
-        />
-        <button type="submit">Sign Up</button>
-      </form>
+    <div class="logo">
+      <h1 class="title">Theatre</h1>
+    </div>
+
+    <div class="container" id="container">
+      <div class="form">
+        <div class="form-container sign-up-container">
+          <form class="signup-form" action="">
+            <h1>Create Account</h1>
+
+            <div>
+              <input
+                class="signup-name"
+                type="text"
+                name="name"
+                placeholder=" &#xf007;  Name"
+              />
+            </div>
+            <div>
+              <input
+                class="signup-email"
+                type="email"
+                name="email"
+                placeholder=" &#xf0e0;  Email"
+              />
+            </div>
+            <div>
+              <input
+                class="signup-password"
+                type="password"
+                name="password"
+                placeholder="&#xf023;  Password"
+              />
+            </div>
+            <button class="submit">SignUp</button>
+          </form>
+        </div>
+        <div class="form-container sign-in-container">
+          <form class="signin-form" action="#">
+            <h1>Sign In</h1>
+            <div>
+              <input
+                class="signin-email"
+                type="email"
+                name="email"
+                placeholder=" &#xf0e0;  Email"
+              />
+            </div>
+            <div>
+              <input
+                class="signin-password"
+                type="password"
+                name="password"
+                placeholder=" &#xf023;  Password"
+              />
+            </div>
+
+            <button class="submit">Sign In</button>
+          </form>
+        </div>
+      </div>
+      <div class="overlay-container">
+        <div class="overlay">
+          <div class="overlay-panel overlay-left">
+            <h1>You're Welcome</h1>
+            <p>Login to Enter the Theatre</p>
+            <button class="ghost" id="signIn">Sign In</button>
+          </div>
+          <div class="overlay-panel overlay-right">
+            <h1>Hey, Buddy!</h1>
+
+            <p>Oops! don't have an account? Signup</p>
+            <button class="ghost" id="signUp">Sign Up</button>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script src="./login.js"></script>
