--- a/pages/booking/book.html
+++ b/pages/booking/book.html
@@ -10,16 +10,7 @@
     <style></style>
   </head>
   <body>
-    <div class="movimg"></div>
-
-    <div class="movie-container">
-      <label style="font-size: 1em">Pick a movie:</label>
-      <select id="movie">
-        <option value="10">Jurassic Park ($10)</option>
-        <option value="12">Logan ($12)</option>
-        <option value="8">Avengers Infinity War ($8)</option>
-      </select>
-    </div>
+    <h1 id="title"></h1>
 
     <ul class="showcase">
       <li>
