--- a/pages/booking/book.html
+++ b/pages/booking/book.html
@@ -10,99 +10,121 @@
     <style></style>
   </head>
   <body>
-    <h1 id="title"></h1>
-    <div id="movimg"></div>
+    <div class="whole">
+      <div class="image">
+        <h1 id="title"></h1>
+        <div id="movimg"></div>
+      </div>
 
-    <ul class="showcase">
-      <li>
-        <div id="seat" class="seat"></div>
-        <small class="status" style="font-size: 1em">N/A</small>
-      </li>
-      <li>
-        <div id="seat" class="seat selected"></div>
-        <small class="status" style="font-size: 1em">Selected</small>
-      </li>
-      <li>
-        <div id="seat" class="seat occupied"></div>
-        <small class="status" style="font-size: 1em">Occupied</small>
-      </li>
-    </ul>
+      <div class="contt">
+        <h2>Cinema Kocation: IIITM GWALIOR</h2>
 
-    <div class="container">
-      <div class="screen"></div>
+        <ul class="showcase">
+          <li>
+            <div class="seat"></div>
+            <small>N/A</small>
+          </li>
+          <li>
+            <div class="seat selected"></div>
+            <small>Selected</small>
+          </li>
+          <li>
+            <div class="seat occupied"></div>
+            <small>Occupied</small>
+          </li>
+        </ul>
 
-      <div class="row">
-        <div id="seat" class="seat"></div>
-        <div id="seat" class="seat"></div>
-        <div id="seat" class="seat"></div>
-        <div id="seat" class="seat"></div>
-        <div id="seat" class="seat"></div>
-        <div id="seat" class="seat"></div>
-        <div id="seat" class="seat"></div>
-        <div id="seat" class="seat"></div>
-      </div>
-      <div class="row">
-        <div id="seat" class="seat"></div>
-        <div id="seat" class="seat"></div>
-        <div id="seat" class="seat"></div>
-        <div id="seat" class="seat occupied"></div>
-        <div id="seat" class="seat occupied"></div>
-        <div id="seat" class="seat"></div>
-        <div id="seat" class="seat"></div>
-        <div id="seat" class="seat"></div>
-      </div>
-      <div class="row">
-        <div id="seat" class="seat"></div>
-        <div id="seat" class="seat"></div>
-        <div id="seat" class="seat"></div>
-        <div id="seat" class="seat"></div>
-        <div id="seat" class="seat"></div>
-        <div id="seat" class="seat"></div>
-        <div id="seat" class="seat occupied"></div>
-        <div id="seat" class="seat occupied"></div>
-      </div>
-      <div class="row">
-        <div id="seat" class="seat"></div>
-        <div id="seat" class="seat"></div>
-        <div id="seat" class="seat"></div>
-        <div id="seat" class="seat"></div>
-        <div id="seat" class="seat"></div>
-        <div id="seat" class="seat"></div>
-        <div id="seat" class="seat"></div>
-        <div id="seat" class="seat"></div>
-      </div>
-      <div class="row">
-        <div id="seat" class="seat"></div>
-        <div id="seat" class="seat"></div>
-        <div id="seat" class="seat"></div>
-        <div id="seat" class="seat occupied"></div>
-        <div id="seat" class="seat occupied"></div>
-        <div id="seat" class="seat"></div>
-        <div id="seat" class="seat"></div>
-        <div id="seat" class="seat"></div>
-      </div>
-      <div class="row">
-        <div id="seat" class="seat"></div>
-        <div id="seat" class="seat"></div>
-        <div id="seat" class="seat"></div>
-        <div id="seat" class="seat"></div>
-        <div id="seat" class="seat occupied"></div>
-        <div id="seat" class="seat occupied"></div>
-        <div id="seat" class="seat occupied"></div>
-        <div id="seat" class="seat"></div>
+        <div class="container">
+          <div class="movie-screen">
+            <img src="/assets/screen-thumb.png" alt="screen" />
+          </div>
+
+          <div class="row-container">
+            <div class="row">
+              <div class="seat"></div>
+              <div class="seat"></div>
+              <div class="seat"></div>
+              <div class="seat"></div>
+              <div class="seat"></div>
+              <div class="seat"></div>
+              <div class="seat"></div>
+              <div class="seat"></div>
+            </div>
+            <div class="row">
+              <div class="seat"></div>
+              <div class="seat"></div>
+              <div class="seat"></div>
+              <div class="seat occupied"></div>
+              <div class="seat occupied"></div>
+              <div class="seat"></div>
+              <div class="seat"></div>
+              <div class="seat"></div>
+            </div>
+            <div class="row">
+              <div class="seat"></div>
+              <div class="seat"></div>
+              <div class="seat"></div>
+              <div class="seat"></div>
+              <div class="seat"></div>
+              <div class="seat"></div>
+              <div class="seat occupied"></div>
+              <div class="seat occupied"></div>
+            </div>
+            <div class="row">
+              <div class="seat"></div>
+              <div class="seat"></div>
+              <div class="seat"></div>
+              <div class="seat"></div>
+              <div class="seat"></div>
+              <div class="seat"></div>
+              <div class="seat"></div>
+              <div class="seat"></div>
+            </div>
+            <div class="row">
+              <div class="seat"></div>
+              <div class="seat"></div>
+              <div class="seat"></div>
+              <div class="seat occupied"></div>
+              <div class="seat occupied"></div>
+              <div class="seat"></div>
+              <div class="seat"></div>
+              <div class="seat"></div>
+            </div>
+            <h5 class="subtitle">GOLD</h5>
+            <div class="row">
+              <div class="seat"></div>
+              <div class="seat"></div>
+              <div class="seat"></div>
+              <div class="seat"></div>
+              <div class="seat"></div>
+              <div class="seat"></div>
+              <div class="seat"></div>
+              <div class="seat"></div>
+            </div>
+            <div class="row">
+              <div class="seat"></div>
+              <div class="seat"></div>
+              <div class="seat"></div>
+              <div class="seat"></div>
+              <div class="seat occupied"></div>
+              <div class="seat occupied"></div>
+              <div class="seat occupied"></div>
+              <div class="seat"></div>
+            </div>
+            <h5 class="subtitle">DIAMOND</h5>
+
+            <div class="text-wrapper">
+              <p class="text">Selected Seats <span id="count">0</span></p>
+              <p class="text">Total Price ₹<span id="total">0</span></p>
+            </div>
+
+            <a href="../main/main.html">
+              <button class="btn-home">Home</button>
+            </a>
+          </div>
+        </div>
       </div>
     </div>
-
-    <p class="text" style="font-size: 1em; margin: 0px 0px 15px 0px">
-      You have selected <span id="count">0</span> seats for a price of $<span
-        id="total"
-        >0</span
-      >
-    </p>
-
-    <a href="../main/main.html">
-      <button class="btn-home">Home</button>
-    </a>
 
     <script src="./book.js"></script>
   </body>
