--- a/pages/dashboard/dashboard.html
+++ b/pages/dashboard/dashboard.html
@@ -9,19 +9,12 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="flex-container">
-      <div class="content-container">
-        <div class="form-container">
-          <h1 id="name"></h1>
-          <br />
-          <h1 id="user"></h1>
-          <br />
+    <header>
+      <h1 id="user"></h1>
+      <br />
+    </header>
+    <div id="main"></div>
 
-          <span id="date"></span>
-          <br />
-        </div>
-      </div>
-    </div>
     <script src="./dashboard.js"></script>
   </body>
 </html>
